fix scroll jumping as queries load, scroll into view on keyboard shortcuts

--- a/frontend/src/metabase/explorations/components/ExplorationSidebar/ExplorationSidebar.module.css
+++ b/frontend/src/metabase/explorations/components/ExplorationSidebar/ExplorationSidebar.module.css
@@ -4,6 +4,12 @@
 
 .tree {
   overflow-y: auto;
+  /*
+  as we poll for query results, the tree items can get resorted
+  some browsers by default try to keep the scroll position of an anchor item stable
+  but that seems to work poorly for our use case, so disable it
+  */
+  overflow-anchor: none;
   padding: 0 1rem 1rem 0;
 }
 
